--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -3,11 +3,15 @@ name: hello-world
 # on – определяет события, которые запускают воркфлоу
 on: push
 jobs:
-  # hello – произвольно выбранное имя задания
+  # build – произвольно выбранное имя задания
   # их может быть больше одного
-  hello:
+  build:
     # операционная система для работы воркфлоу
     runs-on: ubuntu-latest
     steps: # список шагов, которые надо выполнить
+      # экшен — выполняет какую-то задачу
+      # checkout — клонирует репозиторий
+      - uses: actions/checkout@v4
       # run – произвольная bash-команда
+      # ls -la выведет содержимое текущего репозитория
       - run: make say-hello
